@@ -154,7 +154,9 @@ required during their export.</td>
 <tbody align="left" valign="top">
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3325116);return false;">3325116</a><br></td>
-<td>No longer crashes when selecting system tray's more recent entry immediately after unlock.</td>
+<td>Users can no longer select an entry via the Recent Entry list on the System
+Tray icon if the display has not been restored after the database was minimised or unlocked.
+All other actions via the Recent Entry list are unchanged.</td>
 </tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3303018);return false;">3303018</a><br></td>
